--- a/trung_thien_technology/src/css/SP-One.css
+++ b/trung_thien_technology/src/css/SP-One.css
@@ -1,3 +1,8 @@
+@import "https://cdn.jsdelivr.net/npm/normalize.css@8.0.1";
+@import "https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css";
+@import "https://cdn.jsdelivr.net/npm/font-awesome@5.13.0/css/font-awesome.css";
+
+
 @charset "UTF-8";:root {
     --border-color: rgba(0,0,0,.12);
     --header-height: 3.5rem;
@@ -5,6 +10,14 @@
     --container-width: 1200px;
     --product-padding: .75rem;
     --archive-sidebar-width: 300px
+}
+
+:root {
+    --theme-color: #d10a00;
+    --theme-color-rgb: 26 148 255;
+    --secondary-color: #fdd835;
+    --secondary-color-rgb: 253 216 53;
+    --wc-price-color: #d10a00;
 }
 
 body {
@@ -4469,7 +4482,7 @@ body.woocommerce-cart article>div.woocommerce {
 
 @media (min-width: 980px) {
     body.woocommerce-cart article>div.woocommerce {
-        display:flex;
+        display: flex;
         flex-direction: column;
         background: #fff;
         box-shadow: 0 0 18px rgb(0 0 0 / 12%);
@@ -5446,13 +5459,13 @@ table.woocommerce-orders-table td {
 
 @media(min-width: 980px) {
     .oneshop-card-collapse #product-description.collapse:not(.show) {
-        max-height:400px
+        max-height:1190px
     }
 }
 
 @media(min-width: 1650px) {
     .oneshop-card-collapse #product-description.collapse:not(.show) {
-        max-height:800px
+        max-height:1190px
     }
 }
 
@@ -6027,7 +6040,7 @@ p.stars a:before {
 }
 
 .fa,.far,.fas,.fal {
-    font-family: "Font Awesome 5 Pro"!important
+    font-family: "Fwoocommerceont Awesome 5 Pro"!important
 }
 
 .bk-btn .bk-btn-paynow {
@@ -6078,4 +6091,79 @@ p.stars a:before {
     background: #fff;
     border-radius: 50%;
     margin: 4px
+}
+.wp-block-button__link {
+    color: #fff;
+    background-color: #32373c;
+    border-radius: 9999px;
+    box-shadow: none;
+    text-decoration: none;
+    padding: calc(.667em + 2px) calc(1.333em + 2px);
+    font-size: 1.125em
+}
+
+.wp-block-file__button {
+    background: #32373c;
+    color: #fff;
+    text-decoration: none
+}
+
+
+.woocommerce ul.products li.product .price {
+    position: relative;
+    font-size: 1rem;
+    font-weight: 700;
+    white-space: nowrap;
+    color: var(--wc-price-color);
+    display: block;
+    margin-top: 8px;
+    max-height: 40px
+}
+
+.woocommerce ul.products li.product .price del {
+    opacity: 1;
+    text-decoration: none;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    gap: 8px
+}
+
+.woocommerce ul.products li.product .price del .amount {
+    font-size: .75rem;
+    color: #999;
+    font-weight: 400;
+    text-decoration: line-through
+}
+
+.woocommerce ul.products li.product .price ins {
+    text-decoration: none
+}
+
+.woocommerce ul.products li.product .oneshop-product-sku {
+    display: block;
+    font-weight: 500;
+    font-size: .75rem;
+    margin-top: .5rem;
+    color: #999;
+    line-height: 16px
+}
+
+.woocommerce ul.products li.product .onsale {
+    display: inline-flex;
+    align-items: center;
+    margin: 0;
+    height: 1.25rem;
+    font-weight: 500;
+    font-size: .75rem;
+    z-index: 1;
+    color: #fff;
+    text-align: center;
+    line-height: normal;
+    padding: 0 .25rem;
+    border-radius: .125rem;
+    background: linear-gradient(-90deg,#ec1f1f 0,#ff9c00 100%);
+    position: absolute;
+    top: 0;
+    right: 0
 }
