--- a/trung_thien_technology/src/css/General.scss.css
+++ b/trung_thien_technology/src/css/General.scss.css
@@ -1326,9 +1326,6 @@ svg.icon {
     vertical-align: super;
 }
 
-.lazy-img--prod {
-    padding-bottom: 100%;
-}
 
 .lazy-img-cb {
     padding-bottom: 100%;
@@ -4598,10 +4595,10 @@ svg.icon {
 }
 
 .sidebar-menu .megamenu-item:hover .megamenu-link:before {
-    right: -31px;
+    right: -32px;
     border-top: 16px solid transparent;
     border-left: 16px solid #ea1c04;
-    border-bottom: 15px solid transparent;
+    border-bottom: 14px solid transparent;
     border-right: 16px solid transparent;
     z-index: 100;
     position: absolute;
@@ -7811,4 +7808,55 @@ element.style {
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.form-group{
+    margin-top: 10px;
+}
+.cart-btn .btn {
+    display: block;
+    border-radius: 0;
+    margin-bottom: 4px;
+    width: 100%;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+.btn-red {
+    background: #d00;
+    color: #fff;
+    padding: 7px 20px;
+    font-size: 15px;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    border: solid 1px #ce0101;
+    display: inline-block;
+}
+.button.btn-buynow {
+    width: 50%;
+    min-height: 50px;
+    color: #fff;
+    font-weight: 600;
+    font-size: 15px;
+}
+.product-layout .product-info .product-actions button span.subtext {
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: 3px;
+}
+
+.product-layout .product-info .product-actions button span {
+    display: block;
+}
+.owl-carousel.owl-drag .owl-item {
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.owl-carousel .owl-item {
+    min-height: 1px;
+    float: left;
+    -webkit-backface-visibility: hidden;
+    -webkit-touch-callout: none;
 }
