--- a/trung_thien_technology/src/css/CoreSP.css
+++ b/trung_thien_technology/src/css/CoreSP.css
@@ -797,7 +797,7 @@ nav.mobile-header .btn-cart .cart-count {
 }
 
 /* ====================================================================================================================
- * Block Product
+ * Block PC
  * ====================================================================================================================
  */
 
@@ -1105,7 +1105,7 @@ body #primary {
 }
 
 /* ====================================================================================================================
- * Sort Product
+ * Sort PC
  * ====================================================================================================================
  */
 
@@ -1150,7 +1150,7 @@ body #primary {
 }
 
 /* ====================================================================================================================
- * Product Filter Mobile
+ * PC Filter Mobile
  * ====================================================================================================================
  */
 
@@ -1743,7 +1743,7 @@ h1.woocommerce-products-header__title.page-title {
 }
 
 /* ====================================================================================================================
- * Loop Content Product
+ * Loop Content PC
  * ====================================================================================================================
  */
 
@@ -1983,7 +1983,7 @@ h1.woocommerce-products-header__title.page-title {
 }
 
 /* ====================================================================================================================
- * Single Product
+ * Single PC
  * ====================================================================================================================
  */
 
@@ -2417,7 +2417,7 @@ div.product .oneshop-modal-product-gallery .gallery-thumbs {
 }
 
 /* ====================================================================================================================
- * Single Product Right
+ * Single PC Right
  * ====================================================================================================================
  */
 
@@ -2471,7 +2471,7 @@ div.product .oneshop-modal-product-gallery .gallery-thumbs {
 }
 
 /* ====================================================================================================================
- * Variation Product
+ * Variation PC
  * ====================================================================================================================
  */
 
@@ -2599,7 +2599,7 @@ table.variations td {
 }
 
 /* ====================================================================================================================
- * Product filter
+ * PC filter
  * ====================================================================================================================
  */
 
@@ -3918,7 +3918,7 @@ header.header {
 }
 
 /* ====================================================================================================================
- * Block Product custom
+ * Block PC custom
  * ====================================================================================================================
  */
 
